[tool.pdm]

[project]
name = "twarchive"
version = "2.0"
description = ""
authors = [
    {name = "OverflowCat", email = "overflowcat@gmail.com"},
]
dependencies = [
    "colorterm>=0.3",
    "tweepy>=4.12.1",
    "python-dotenv>=0.21.1",
    "termcolor>=2.2.0",
    "pickledb>=0.9.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}
